--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-ts-tradingview-widgets": "^1.2.5"
+    "react-ts-tradingview-widgets": "^1.2.5",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
