--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -23,6 +25,7 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
