--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "html-react-parser": "^5.1.12",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
